--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,10 @@
 </head>
 
 <body>
+    <div id="screen-size-warning">
+        Please use a larger screen for a better visualization experience (iPad or desktop with width > 800px).
+    </div>
+    
     <div class="container-fluid">
         <div class="navigation" style="background-image: linear-gradient(to bottom, #054863, #0d3245); padding-top: 1%; padding-bottom: 1%; display:flex; align-items: center; justify-content:center;">
             <div class="logo">
