--- a/templates/front.html
+++ b/templates/front.html
@@ -34,29 +34,43 @@ and see our <a href="reference">KDD/VIS/NeurIPS 2023 papers</a> for more details
 
 
 	<script>
-		document.addEventListener("DOMContentLoaded", function() {
-			fetch('/src/json/config.json')
+
+		function isTestEnv() {
+			return fetch('/src/.test')
+			.then(response => {
+				return response.ok;
+			})
+			.catch(error => {
+				return true
+			});
+		}
+
+		$(function() {
+			fetch('/src/config.json')
 			.then(response => response.json())
 			.then(data => {
-				createList(data);
+				delete data['default'];
+				isTestEnv().then(isTest => {
+					if(!isTest) delete data['fellow'];
+					console.log(data);
+					createList(data);
+				})
 			})
 			.catch(error => console.error('Error:', error));
 		});
 
 		// icon: https://fontawesome.com/search?o=r&s=solid&f=classic
-
 		function createList(data) {
 			const container = document.getElementById('dynamicList');
+			
 			for (const key in data) {
-				if (key !== 'default' && data.hasOwnProperty(key)) {
-					const item = data[key];
-					const link = document.createElement('a');
-					link.href = `search?field=${key}`;
-					link.className = 'custom-button';
-					link.innerHTML = `<i class="${item.icon}"></i> ${item.name}`;
-					link.title = item.description || item.name;
-					container.appendChild(link);
-				}
+				const item = data[key];
+				const link = document.createElement('a');
+				link.href = `search?field=${key}`;
+				link.className = 'custom-button';
+				link.innerHTML = `<i class="${item.icon}"></i> ${item.name}`;
+				link.title = item.description || item.name;
+				container.appendChild(link);
 			}
 		}
 	</script>
