update page logo

--- a/templates/front.html
+++ b/templates/front.html
@@ -17,7 +17,7 @@
 	<body class="text-center">
 		<form class="form-signin">
             <input type="hidden" name="csrfmiddlewaretoken" value="Yse6cgbnpqJr4Xjn1flWIVqE5knZ5Ty44Z0GtTvzdxFypbn46s9aILmj2eTgPCWJ">
-			<a href="/"><img class="mb-4" src="/src/image/logo-search.svg" alt="" width="390" height="140.4"></a>
+			<a href="/"><img class="mb-4" src="/src/image/logo-search.jpg" alt="" width="420" height="110"></a>
 			<br />
             <div id="dynamicList" style="display: inline;"></div>
 			<br />
