--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     <div class="container-fluid">
         <div class="navigation" style="background-color: #054863; padding-top: 1%; padding-bottom: 1%; display:flex; align-items: center; justify-content:center;">
             <div class="logo">
-                <a href="/"><img src="/src/image/logo-index.svg" width="300" height="70"></a>
+                <a href="/"><img src="/src/image/logo-index.jpg" width="360" height="84"></a>
             </div>
             <div class="clearfix"></div>
         </div>
