--- a/templates/front.html
+++ b/templates/front.html
@@ -52,7 +52,7 @@ and see our <a href="reference">KDD/VIS/NeurIPS 2023 papers</a> for more details
 				delete data['default'];
 				isTestEnv().then(isTest => {
 					if(!isTest) delete data['fellow'];
-					console.log(data);
+					// console.log(data);
 					createList(data);
 				})
 			})
