fix the bug that updating the condition, the layout will be broken

--- a/templates/index.html
+++ b/templates/index.html
@@ -579,8 +579,8 @@ $(function () {
                         edges = data[3];
                         polygon = data[4];
                         const params = data[0];
-                        const viewBox = params[0];
-                        const transform = params[1];
+                        viewBox = params[0];
+                        transform = params[1];
                         for (let i = 0; i < nodes.length; i++) {
                             nodes[i]['status'] = 0;
                         }
