--- a/templates/list.html
+++ b/templates/list.html
@@ -134,7 +134,7 @@
                 hasFellow = true;
                 var headerRow = document.getElementById('tableHeaderRow');
                 var fellowTh = document.createElement('th');
-                fellowTh.textContent = 'Fellow Year';
+                fellowTh.textContent = 'Award Year';
                 // Find the last <th> element in the row
                 var lastTh = headerRow.querySelector('th:last-child');
                 // Insert the new <th> before the last <th>
