--- a/templates/index.html
+++ b/templates/index.html
@@ -252,21 +252,14 @@
             </div>
 
             <div class="right-column" style="margin-left: -0.6%;">
-                <ul id="paper-list" class="address">
-                    <li>
-                        <ul id="paper-list-title" class="address-text" style="background-color: #054863; border-top-right-radius: 7px;">
-                            <li style="width: 100%; font-size: 16px; margin-top: 4%; margin-bottom: 3%;">
-                                <p>Paper List</p>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text">
-                            <li id="timeline" style="overflow: auto; width: 93%; background-color: white; color: #333; margin-top: 3%; margin-bottom: 3%; margin-left: 6%;"></li>
-                        </ul>
-                    </li>
-                </ul>
+                <div id="paper-list" style="background-color: white; border-top-right-radius: 10px;border-bottom-right-radius: 10px;">
+                    <div style="width: 100%; padding-top: 4%; padding-bottom: 3%;background-color: #054863; border-top-right-radius: 10px;">
+                        <p style="margin-left: 40px; color: white; font-size: 16px; font-weight: bold;">Paper List</p>
+                    </div>
+                    <div id="timeline" style="overflow: auto; background-color: white; color: #333; margin-top: 3%; margin-bottom: 3%; margin-left: 6%; "></div>
 
+                </div>
+                
                 <ul id="selector" class="address">
                     <li>
                         <ul class="address-text" style="background-color: #054863; border-top-left-radius: 10px; border-top-right-radius: 10px;">
@@ -296,151 +289,105 @@
                         </ul>
                     </li>
                 </ul>
-                <ul id="node-info" class="address" style="overflow: auto; background-color: white; border-top-left-radius: 0%; border-top-right-radius: 0%;">
-                    <li>
-                        <ul class="address-text">
-                            <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">paperID</b></li>
-                            <li id="paper-id" style="color: #333; margin-top: 3%; margin-left: 10%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text">
-                            <li style="width: 40%; margin-top: 3%;"><b style="margin-top: 10%; margin-left: 25.5%;">title</b></li>
-                            <li id="paper-name" style="color: #333; width: 85%; margin-top: 3%; margin-left: 10%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text">
-                            <li style="width: 40%; margin-top: 3%;"><b style="margin-top: 10%; margin-left: 25.5%;">authors</b></li>
-                            <li id="paper-authors" style="color: #333; width: 85%; margin-top: 3%; margin-left: 10%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text">
-                            <li style="width: 80%; margin-top: 3%;"><b style="margin-top: 10%; margin-left: 13%;">core paper prob.</b></li>
-                            <li id="paper-prob" style="color: #333; width: 10%; margin-top: 3%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text">
-                            <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">venue</b></li>
-                            <li id="paper-venue" style="color: #333; margin-top: 3%; margin-left: 10%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text">
-                            <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">year</b></li>
-                            <li id="paper-year" style="color: #333; margin-top: 3%; margin-left: 10%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text">
-                            <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">#citation</b></li>
-                            <li id="paper-citation" style="color: #333; margin-top: 3%; margin-left: 10%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text">
-                            <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">topic</b></li>
-                            <li id="paper-field" style="width: 85%; color: #333; margin-top: 3%; margin-left: 10%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text">
-                            <li style="width: 40%; margin-top: 3%;"><b style=" margin-left: 25.5%;">abstract</b></li>
-                            <li id="abstract" style="width: 85%; color: #333; margin-top: 3%; margin-left: 10%;"></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul id="node-info-blank" style="background-color: white;"></ul>
+                
+                <div id="node-info" style="padding: 10px; padding-left: 25px; background-color: white; overflow-y: auto; border-bottom-right-radius: 10px;"> <!-- 添加左侧内边距 -->
+                    <!-- 表格部分 -->
+                    <table style="background-color: white; border-top-left-radius: 0%; border-top-right-radius: 0%; width: 100%;">
+                        <tr>
+                            <th style="width: 30%;">paperID</th>
+                            <td id="paper-id" style="color: #333;"></td>
+                        </tr>
+                        <tr>
+                            <th>title</th>
+                            <td id="paper-name" style="color: #333;"></td>
+                        </tr>
+                        <tr>
+                            <th>authors</th>
+                            <td id="paper-authors" style="color: #333;"></td>
+                        </tr>
+                        <tr>
+                            <th>core paper prob.</th>
+                            <td id="paper-prob" style="color: #333;"></td>
+                        </tr>
+                        <tr>
+                            <th>venue</th>
+                            <td id="paper-venue" style="color: #333;"></td>
+                        </tr>
+                        <tr>
+                            <th>year</th>
+                            <td id="paper-year" style="color: #333;"></td>
+                        </tr>
+                        <tr>
+                            <th>#citation</th>
+                            <td id="paper-citation" style="color: #333;"></td>
+                        </tr>
+                        <tr>
+                            <th>topic</th>
+                            <td id="paper-field" style="color: #333;"></td>
+                        </tr>
+                    </table>
+                
+                    <!-- abstract 部分 -->
+                    <div id="abstract-container" style="background-color: white;"> <!-- 设置最大高度和滚动 -->
+                        <h3 style="text-align: left; margin: 3%;">Abstract</h3>
+                        <p id="abstract" style="color: #333; margin: 3%">
+                            <!-- Abstract 文本 -->
+                        </p>
+                    </div>
+                </div>
 
-                <ul id="up-line" class="address" style="border-top-left-radius: 0%; border-top-right-radius: 0%;">
-                    <li>
-                        <ul class="address-text">
-                            <li id="cited-papers" class="demo-tree demo-tree-box" style="width: 90%; overflow: auto; margin-left: 5%;"></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul id="down-line" class="address" style="border-top-left-radius: 0%; border-top-right-radius: 0%;">
-                    <li>
-                        <ul class="address-text">
-                            <li id="citing-papers" class="demo-tree demo-tree-box" style="width: 90%; overflow: auto; margin-left: 5%;"></li>
-                        </ul>
-                    </li>
-                </ul>
-
-                <ul id="edge-info" class="address" style="padding-bottom: 10%;">
-                    <li>
-                        <ul class="address-text citation-context-minus-height" style="background-color: #054863; border-top-left-radius: 10px; border-top-right-radius: 10px;">
-                            <li style="width: 100%; font-size: 16px; margin-top: 4%; margin-bottom: 3%;">
-                                <p>Citation Relationship</p>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text citation-context-minus-height">
-                            <li style="width: 60%;"><b style="margin-left: 16.6%;">extend-type prob.</b></li>
-                            <li id="extend-prob" style="color: #333; margin-right: 5%;"></li>
-                        </ul>
-                    </li>
-                    <hr class="citation-context-minus-margin" />
-                    <li>
-                        <ul class="address-text citation-context-minus-height">
-                            <li style="width: 40%"><b style="margin-left: 25%;">cited paper</b></li>
-                            <li id="source-paper" style="color: #333; margin-left: 10%; margin-right: 5%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text citation-context-minus-height">
-                            <li style="width: 40%"><b style="margin-left: 25%;">year</b></li>
-                            <li id="source-paper-year" style="color: #333; margin-left: 10%; margin-right: 5%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text citation-context-minus-height">
-                            <li style="width: 40%"><b style="margin-left: 25%;">venu</b></li>
-                            <li id="source-paper-venu" style="color: #333; margin-left: 10%; margin-right: 5%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text citation-context-minus-height">
-                            <li style="width: 40%"><b style="margin-left: 25%;">#citation</b></li>
-                            <li id="source-paper-citation" style="color: #333; margin-left: 10%; margin-right: 5%;"></li>
-                        </ul>
-                    </li>
-                    <hr class="citation-context-minus-margin" />
-                    <li>
-                        <ul class="address-text citation-context-minus-height">
-                            <li style="width: 40%"><b style="margin-left: 25%;">citing paper</b></li>
-                            <li id="target-paper" style="color: #333; margin-left: 10%; margin-right: 5%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text citation-context-minus-height">
-                            <li style="width: 40%"><b style="margin-left: 25%;">year</b></li>
-                            <li id="target-paper-year" style="color: #333; margin-left: 10%; margin-right: 5%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text citation-context-minus-height">
-                            <li style="width: 40%"><b style="margin-left: 25%;">venu</b></li>
-                            <li id="target-paper-venu" style="color: #333; margin-left: 10%; margin-right: 5%;"></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <ul class="address-text citation-context-minus-height">
-                            <li style="width: 40%"><b style="margin-left: 25%;">#citation</b></li>
-                            <li id="target-paper-citation" style="color: #333; margin-left: 10%; margin-right: 5%;"></li>
-                        </ul>
-                    </li>
-                    <hr class="citation-context-minus-margin" />
-                    <li>
-                        <ul class="address-text">
-                            <li class="citation-context-minus-height" style="width: 50%"><b style="margin-left: 20%;">citation context</b></li>
-                            <li id="citation-context" style="overflow: auto; width: 85%; background-color: white; color: #333; margin-top: 3%; margin-left: 10%;"></li>
-                        </ul>
-                    </li>
-                </ul>
+                <div id="edge-info" class="address" >
+                    <div id="edge-title" style="width: 100%; padding-top: 4%; padding-bottom: 3%;background-color: #054863; border-top-right-radius: 10px;">
+                        <p style="margin-left: 40px; color: white; font-size: 16px; font-weight: bold;">Citation Relationship</p>
+                    </div>
+                    <div id="edge-content" style="background-color: white; padding: 10px; padding-left: 25px; overflow-y: auto; border-bottom-right-radius: 10px;">
+                        <table style="width: 100%;">
+                            <tr>
+                                <th style="width: 30%;">extend-type prob.</th>
+                                <td id="extend-prob" style="color: #333;"></td>
+                            </tr>
+                            <tr>
+                                <th>cited paper</th>
+                                <td id="source-paper" style="color: #333;"></td>
+                            </tr>
+                            <tr>
+                                <th>year</th>
+                                <td id="source-paper-year" style="color: #333;"></td>
+                            </tr>
+                            <tr>
+                                <th>venu</th>
+                                <td id="source-paper-venu" style="color: #333;"></td>
+                            </tr>
+                            <tr>
+                                <th>#citation</th>
+                                <td id="source-paper-citation" style="color: #333;"></td>
+                            </tr>
+                            <tr>
+                                <th>citing paper</th>
+                                <td id="target-paper" style="color: #333;"></td>
+                            </tr>
+                            <tr>
+                                <th>year</th>
+                                <td id="target-paper-year" style="color: #333;"></td>
+                            </tr>
+                            <tr>
+                                <th>venu</th>
+                                <td id="target-paper-venu" style="color: #333;"></td>
+                            </tr>
+                            <tr>
+                                <th>#citation</th>
+                                <td id="target-paper-citation" style="color: #333;"></td>
+                            </tr>
+                        </table>
+                        <div id="citation-context-container" style="background-color: white;"> <!-- 设置最大高度和滚动 -->
+                            <h3 style="text-align: left; margin: 3%;">citation context</h3>
+                            <p id="citation-context" style="color: #333; margin: 3%">
+                                <!-- Abstract 文本 -->
+                            </p>
+                        </div>
+                    </div>
+                    
+                </div>
                 
             </div>
             <div class="clearfix"></div>
