--- a/templates/search.html
+++ b/templates/search.html
@@ -23,7 +23,7 @@
 		<div style="display: flex; width: 60%; margin-left: 20%; margin-bottom: 1%;">
 			<!-- <img src="/src/image/search.png" style="order: -1; height: 38px;"> -->
 			<div class="card" style="background-color: #f5f5f5; height: 50px; width: 30%; border-top-left-radius: 24px; border-bottom-left-radius: 24px;">
-				<div id="scholar-field" class="card-body" style="padding-top: 13px; border-right: none;">
+				<div id="scholar-field" class="card-body" style="display: flex; align-items: center; justify-content: center; border-right: none; padding: 0; ">
 					{{ field }} Scholar
 				</div>
 			</div>
