--- a/templates/list.html
+++ b/templates/list.html
@@ -87,7 +87,7 @@
                 var content = `
                     <tr>
                         <td>${i + 1}</td>
-                        <td>${scholar["name"]}</td>
+                        <td>${scholar["original"] || scholar["name"]}</td>
                         <td>${scholar["paperCount"]}</td>
                         <td>${scholar["citationCount"]}</td>
                         <td>${scholar["hIndex"]}</td>
@@ -134,7 +134,7 @@
                 hasFellow = true;
                 var headerRow = document.getElementById('tableHeaderRow');
                 var fellowTh = document.createElement('th');
-                fellowTh.textContent = 'Award Year';
+                fellowTh.textContent = 'Fellow Year';
                 // Find the last <th> element in the row
                 var lastTh = headerRow.querySelector('th:last-child');
                 // Insert the new <th> before the last <th>
