--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
         <div class="navigation" style="background-color: #054863; padding-top: 1%; padding-bottom: 1%; display:flex; align-items: center; justify-content:center;">
             <div class="logo">
                 <a href="/"><img src="/src/image/logo-index.jpg" width="360" height="84"></a>
+                <div id="field" style="display: inline-block;"><h1></h1></div>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -426,6 +427,11 @@ $(function () {
         if (fieldType in data) {
             Object.assign(config, data[fieldType])
         }
+        const fieldlabel = data[fieldType].name;
+        imgHeight = $("img").css("height");
+        $("#field").css("height", imgHeight);
+        $("#field").css("line-height", imgHeight);
+        $("#field h1").append(`<span>- ${fieldlabel}</span>`);
 
         d3.json(filename).then( data => {
             years = data[1];            //年份节点
